--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h1 class="hero__headline">Tenha o iPhone 17 Pro Max na Europa.</h1>
           <p class="hero__subheadline">Plataforma europeia estruturada de aquisição coletiva.</p>
           <p class="hero__mini-text">Sem bancos. Sem surpresas. Com estrutura.</p>
-          <a href="#reservar" class="btn btn--primary btn--lg">Quero minha posição prioritária</a>
+          <a href="#reservar" class="btn btn--primary btn--lg">Quero minha posição</a>
         </div>
         <div class="hero__visual">
           <img src="images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
