[dyad] Corrigi a visibilidade da logomarca no rodapé (footer), garantindo que o nome "WEKOTA" e a tagline estejam com cores claras para contrastar com o fundo escuro. Agora a identidade visual está perfeitamente visível em todas as partes do site.

--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
             <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" />
           </svg>
           <div class="logo__text">
-            <span class="logo__brand text-white">WEKOTA</span>
-            <span class="logo__tagline text-white-60">Together, we access.</span>
+            <span class="logo__brand" style="color: white;">WEKOTA</span>
+            <span class="logo__tagline" style="color: rgba(255, 255, 255, 0.6);">Together, we access.</span>
           </div>
         </a>
         <p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p>
