[dyad] Atualizei a seção de escassez para 12 vagas no total, adicionando as bolinhas correspondentes (4 preenchidas, 8 restantes). Aumentei o espaçamento entre todas as linhas de texto (line-height) para conferir um ar mais arejado e sofisticado, e ampliei as margens verticais entre os blocos para elevar a clareza visual conforme solicitado.

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
     <!-- 4.1️⃣ SEÇÃO ESCASSEZ (URGENCY) -->
     <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('images/hero-split.png') center/cover fixed;">
       <div class="container text-center text-white">
-        <div class="status-badge-premium mb-24">
+        <div class="status-badge-premium mb-32">
           <span class="status-dot-pulse"></span> INSCRIÇÕES ABERTAS PARA O GRUPO
         </div>
         
-        <h2 class="urgency-title mb-16">Posições limitadas <br> <span class="text-teal">disponíveis.</span></h2>
-        <p class="section-desc text-white-60 mb-32 mx-auto">O grupo abrirá apenas quando os primeiros <strong>10 participantes qualificados</strong> confirmarem a sua posição.</p>
+        <h2 class="urgency-title mb-32">Posições limitadas <br> <span class="text-teal">disponíveis.</span></h2>
+        <p class="section-desc text-white-60 mb-48 mx-auto" style="line-height: 1.8;">O grupo abrirá apenas quando os primeiros <strong>12 participantes qualificados</strong> confirmarem a sua posição.</p>
         
-        <div class="positions-status mb-48">
+        <div class="positions-status mb-60">
           <div class="dots-row">
             <span class="dot-pos filled"></span>
             <span class="dot-pos filled"></span>
@@ -168,11 +168,13 @@
             <span class="dot-pos"></span>
             <span class="dot-pos"></span>
             <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
           </div>
-          <p class="dots-label mt-16">4 de 10 posições confirmadas — 6 restantes</p>
+          <p class="dots-label mt-24">4 de 12 posições confirmadas — 8 restantes</p>
         </div>
 
-        <div class="countdown-wrapper mb-48">
+        <div class="countdown-wrapper mb-60">
           <p class="countdown-header mb-16"><i data-lucide="clock" class="icon-sm"></i> A JANELA DE INSCRIÇÃO FECHA EM</p>
           <div class="countdown-grid">
             <div class="timer-unit">
