[dyad] wrote 1 file(s)

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <ul class="footer__links">
           <li><a href="#como-funciona">Como funciona</a></li>
           <li><a href="#reservar">Lista prioritária</a></li>
-          <li><a href="mailto:contato@wekota.com">Contato</a></li>
+          <li><a href="mailto:sales@wekota.eu">Contato</a></li>
         </ul>
       </div>
       <div class="footer__col">
