[dyad] Atualizei o texto da seção final de CTA para refletir o total de 12 participantes e 12 vagas no total (6 de 12 confirmadas), garantindo a consistência com a seção de urgência configurada anteriormente.

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       <div class="container text-center">
         <div class="escasset-badge">⏳ Vagas limitadas</div>
         <h2 class="section-title mb-16">Posições limitadas disponíveis.</h2>
-        <p class="section-desc mb-48">O grupo abre com os primeiros 10 participantes qualificados.</p>
+        <p class="section-desc mb-48 mx-auto">O grupo abre com os primeiros 12 participantes qualificados.</p>
 
         <div class="form-card-premium">
           <form class="lead-form">
@@ -410,7 +410,7 @@
             </div>
             <button type="submit" class="btn btn--primary btn--full btn--lg mt-24">RESERVAR MINHA POSIÇÃO</button>
           </form>
-          <div class="counter-discreet">6 de 10 vagas confirmadas</div>
+          <div class="counter-discreet">6 de 12 vagas confirmadas</div>
         </div>
       </div>
     </section>
