[dyad] Atualizei a estrutura de pagamento com os valores das mensalidades: 12x de 149,00€ e 24x de 75,00€. Também alterei a numeração dos grupos para #101 e #102 e estilizei os preços para terem destaque institucional dentro dos cards, reforçando a clareza e transparência dos valores.

--- a/index.html
+++ b/index.html
@@ -220,9 +220,13 @@
           <!-- Opção 01 -->
           <div class="payment-card-premium">
             <div class="card-header-finance">
-              <span class="finance-tag">GRUPO #01</span>
+              <span class="finance-tag">GRUPO #101</span>
               <h3 class="duration-title">12 meses</h3>
               <p class="duration-subtitle">duração do grupo</p>
+              <div class="installment-price mt-24">
+                <span class="price-value">149,00€</span>
+                <span class="price-label">/ mensalidade fixa</span>
+              </div>
             </div>
             <div class="card-body-finance">
               <ul class="finance-list">
@@ -230,15 +234,19 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="#reservar" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="https://wa.me/34671941267" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
           <!-- Opção 02 -->
           <div class="payment-card-premium">
             <div class="card-header-finance">
-              <span class="finance-tag">GRUPO #02</span>
+              <span class="finance-tag">GRUPO #102</span>
               <h3 class="duration-title">24 meses</h3>
               <p class="duration-subtitle">duração do grupo</p>
+              <div class="installment-price mt-24">
+                <span class="price-value">75,00€</span>
+                <span class="price-label">/ mensalidade fixa</span>
+              </div>
             </div>
             <div class="card-body-finance">
               <ul class="finance-list">
@@ -246,7 +254,7 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="#reservar" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="https://wa.me/34671941267" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
         </div>
