[dyad] Implementei o destaque da "Garantia de Produto Atualizado" no plano de 24 meses. Adicionei um badge superior de "Garantia de Upgrade", uma borda realçada para o card e um bloco informativo explicando que o participante recebe automaticamente o último modelo de iPhone disponível, elevando a percepção de valor do plano de maior duração.

--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
             </div>
           </div>
           <!-- Opção 02 -->
-          <div class="payment-card-premium">
+          <div class="payment-card-premium featured-plan">
             <div class="card-header-finance">
+              <div class="badge-upgrade">GARANTIA DE UPGRADE</div>
               <span class="finance-tag">GRUPO #102</span>
               <h3 class="duration-title">24 meses</h3>
               <p class="duration-subtitle">duração do grupo</p>
@@ -249,6 +250,10 @@
               </div>
             </div>
             <div class="card-body-finance">
+              <div class="upgrade-info mb-24">
+                <i data-lucide="sparkles" class="upgrade-icon"></i>
+                <p>Todos os nossos planos recebem automaticamente <strong>upgrade para o último modelo</strong> de iPhone disponível.</p>
+              </div>
               <ul class="finance-list">
                 <li><i data-lucide="check" class="finance-check"></i> Mensalidades fixas</li>
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
