[dyad] Corrigi o desalinhamento e o corte visual nos cards de pagamento. Agora, ambos os cards possuem a borda colorida (Teal) de forma uniforme e o espaçamento superior foi ajustado para que o badge de "Garantia de Upgrade" não seja cortado pelo contêiner, garantindo um visual limpo e profissional em ambas as opções.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
         <div class="payment-flex">
           <!-- Opção 01 -->
-          <div class="payment-card-premium">
+          <div class="payment-card-premium featured-plan">
             <div class="card-header-finance">
               <span class="finance-tag">GRUPO #101</span>
               <h3 class="duration-title">12 meses</h3>
