--- a/index.html
+++ b/index.html
@@ -240,7 +240,6 @@
           <!-- Opção 02 -->
           <div class="payment-card-premium featured-plan">
             <div class="card-header-finance">
-              <div class="badge-upgrade">GARANTIA DE UPGRADE</div>
               <span class="finance-tag">GRUPO #102</span>
               <h3 class="duration-title">24 meses</h3>
               <p class="duration-subtitle">duração do grupo</p>
@@ -251,8 +250,11 @@
             </div>
             <div class="card-body-finance">
               <div class="upgrade-info mb-24">
-                <i data-lucide="sparkles" class="upgrade-icon"></i>
-                <p>Todos os nossos planos recebem automaticamente <strong>upgrade para o último modelo</strong> de iPhone disponível.</p>
+                <div class="badge-upgrade-inline">GARANTIA DE UPGRADE</div>
+                <div class="upgrade-text-wrap">
+                  <i data-lucide="sparkles" class="upgrade-icon"></i>
+                  <p>Todos os nossos planos recebem automaticamente <strong>upgrade para o último modelo</strong> de iPhone disponível.</p>
+                </div>
               </div>
               <ul class="finance-list">
                 <li><i data-lucide="check" class="finance-check"></i> Mensalidades fixas</li>
