[dyad] Atualizei a Hero com a logo oficial da WEKOTA e novos textos focados nas etapas do processo (Junte-se a um grupo. Pague parcelas fixas. Receba o seu iPhone.). Também simplifiquei o selo de benefícios para "Sem banco, sem juros, sem surpresas." e garanti que a logo oficial seja exibida corretamente tanto no cabeçalho quanto no rodapé em todos os dispositivos.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,7 @@
   <header class="header">
     <div class="container header__inner">
       <a href="#" class="logo">
-        <svg class="logo__symbol" viewBox="0 0 40 40" fill="none">
-          <path d="M20 5 A15 15 0 0 0 5 20" stroke="#163E63" stroke-width="6" fill="none" />
-          <path d="M5 20 A15 15 0 0 0 20 35" stroke="#163E63" stroke-width="6" fill="none" />
-          <path d="M20 35 A15 15 0 0 0 35 20" stroke="#163E63" stroke-width="6" fill="none" />
-          <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" fill="none" />
-        </svg>
-        <div class="logo__text">
-          <span class="logo__brand">WEKOTA</span>
-          <span class="logo__tagline">Together, we access.</span>
-        </div>
+        <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
       </a>
       <a href="#reservar" class="btn btn--outline-navy">Entrar na Lista</a>
     </div>
@@ -41,8 +32,8 @@
       <div class="container hero__inner">
         <div class="hero__content">
           <h1 class="hero__headline">Tenha o iPhone 17 Pro Max na Europa.</h1>
-          <p class="hero__subheadline">Plataforma europeia estruturada de aquisição coletiva.</p>
-          <p class="hero__mini-text">Sem bancos. Sem surpresas. Com estrutura.</p>
+          <p class="hero__subheadline">Junte-se a um grupo. Pague parcelas fixas. Receba o seu iPhone.</p>
+          <p class="hero__mini-text">Sem banco, sem juros, sem surpresas.</p>
           <a href="#reservar" class="btn btn--primary btn--lg">Quero minha posição</a>
         </div>
         <div class="hero__visual">
@@ -436,16 +427,7 @@
     <div class="container footer__grid">
       <div class="footer__col">
         <a href="#" class="logo mb-24">
-          <svg class="logo__symbol" viewBox="0 0 40 40" fill="none">
-            <path d="M20 5 A15 15 0 0 0 5 20" stroke="white" stroke-width="6" />
-            <path d="M5 20 A15 15 0 0 0 20 35" stroke="white" stroke-width="6" />
-            <path d="M20 35 A15 15 0 0 0 35 20" stroke="white" stroke-width="6" />
-            <path d="M35 20 A15 15 0 0 0 20 5" stroke="#2FB6A6" stroke-width="6" />
-          </svg>
-          <div class="logo__text">
-            <span class="logo__brand" style="color: white;">WEKOTA</span>
-            <span class="logo__tagline" style="color: rgba(255, 255, 255, 0.6);">Together, we access.</span>
-          </div>
+          <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert">
         </a>
         <p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p>
       </div>
