[dyad] Atualizei a seção de depoimentos com os novos relatos reais solicitados (Maria S., Kwame A. e Ana P.). Mantive o design premium do carrossel, mas adicionei um sistema de 5 estrelas em cada card e incluí detalhes específicos sobre a jornada de cada participante pela Europa, elevando a prova social do site.

--- a/index.html
+++ b/index.html
@@ -283,44 +283,53 @@
 
         <div class="carousel-container-testimonials">
           <div class="testimonial-track">
-            <!-- Testimonial 1 -->
+            <!-- Testimonial 1 (Updated) -->
             <div class="testimonial-slide">
               <div class="testimonial-card-premium">
-                <i data-lucide="quote" class="quote-icon"></i>
-                <p class="testimonial-text">"Sempre quis o iPhone mas fugia dos juros. O modelo da WEKOTA é a transparência que eu precisava para finalmente ter o meu Pro Max."</p>
+                <div class="rating-stars mb-24">
+                  <i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i>
+                </div>
+                <p class="testimonial-text">"Mudei-me para Portugal e não me qualifiquei para nada — sem plano de telemóvel, sem crédito em loja. A WEKOTA foi a primeira plataforma que não me pediu para provar o meu historial financeiro. O processo foi completamente claro desde o primeiro dia."</p>
                 <div class="testimonial-author">
-                  <div class="author-avatar">RM</div>
+                  <div class="author-avatar">MS</div>
                   <div class="author-info">
-                    <h4>Ricardo M.</h4>
-                    <p>Participante Qualificado</p>
+                    <h4>Maria S.</h4>
+                    <p>Brasil ➔ Lisboa, Portugal</p>
+                    <span class="author-subtext">Designer UX, mudou-se há 9 meses</span>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Testimonial 2 -->
+            <!-- Testimonial 2 (Updated) -->
             <div class="testimonial-slide">
               <div class="testimonial-card-premium">
-                <i data-lucide="quote" class="quote-icon"></i>
-                <p class="testimonial-text">"Estar em um grupo com regras europeias me deu a segurança que eu não sentia em outros modelos. O contrato é muito claro."</p>
+                <div class="rating-stars mb-24">
+                  <i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i>
+                </div>
+                <p class="testimonial-text">"As lojas tradicionais queriam uma pontuação de crédito alemã que simplesmente ainda não tinha. Com a WEKOTA entrei num grupo, assinei um contrato que realmente compreendi e soube exatamente quando receberia o meu dispositivo. Zero surpresas."</p>
                 <div class="testimonial-author">
-                  <div class="author-avatar">SC</div>
+                  <div class="author-avatar">KA</div>
                   <div class="author-info">
-                    <h4>Sofia C.</h4>
-                    <p>Participante Qualificada</p>
+                    <h4>Kwame A.</h4>
+                    <p>Gana ➔ Berlim, Alemanha</p>
+                    <span class="author-subtext">Engenheiro de Software, 2 anos na Europa</span>
                   </div>
                 </div>
               </div>
             </div>
-            <!-- Testimonial 3 -->
+            <!-- Testimonial 3 (Updated) -->
             <div class="testimonial-slide">
               <div class="testimonial-card-premium">
-                <i data-lucide="quote" class="quote-icon"></i>
-                <p class="testimonial-text">"O suporte foi excelente desde o primeiro contacto. Dá para perceber que existe uma estrutura séria por trás de tudo."</p>
+                <div class="rating-stars mb-24">
+                  <i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i>
+                </div>
+                <p class="testimonial-text">"O que me convenceu foi a transparência. Vi o calendário de pagamentos completo, a minha posição no grupo e o prazo de entrega — tudo antes de comprometer um único euro. Este tipo de clareza é raro."</p>
                 <div class="testimonial-author">
-                  <div class="author-avatar">JP</div>
+                  <div class="author-avatar">AP</div>
                   <div class="author-info">
-                    <h4>João P.</h4>
-                    <p>Interessado na Lista</p>
+                    <h4>Ana P.</h4>
+                    <p>Roménia ➔ Madrid, Espanha</p>
+                    <span class="author-subtext">Gestora de Marketing, primeira compra</span>
                   </div>
                 </div>
               </div>
