[dyad] Adicionei a página oficial de Política de Privacidade ao site e incluí o link correspondente no rodapé. Estilizei a nova página com a paleta de cores (Navy e Teal) e tipografia da WEKOTA para manter a consistência visual institucional.

--- a/index.html
+++ b/index.html
@@ -533,6 +533,9 @@
       <div class="footer__col">
         <h4 class="footer__title">Legal</h4>
         <p class="footer__legal-text">Operamos sob jurisdição europeia.</p>
+        <ul class="footer__links">
+          <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
+        </ul>
         <p class="footer__copyright">© 2026 WEKOTA. Todos os direitos reservados.</p>
       </div>
     </div>
