[dyad] Adicionei os Termos e Condições oficiais ao site, com link no rodapé. Estilizei a página com a identidade visual da WEKOTA (Navy e Teal) para manter a consistência institucional.

--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
         <p class="footer__legal-text">Operamos sob jurisdição europeia.</p>
         <ul class="footer__links">
           <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
+          <li><a href="termos-condicoes.html">Termos e Condições</a></li>
         </ul>
         <p class="footer__copyright">© 2026 WEKOTA. Todos os direitos reservados.</p>
       </div>
