--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#" class="logo">
         <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
       </a>
-      <a href="#reservar" class="btn btn--outline-navy">Entrar na Lista</a>
+      <a href="funil-vendas.html" class="btn btn--outline-navy">Entrar na Lista</a>
     </div>
   </header>
 
@@ -34,7 +34,7 @@
           <h1 class="hero__headline">Tenha o iPhone 17 Pro Max na Europa.</h1>
           <p class="hero__subheadline">Junte-se a um grupo. Pague parcelas fixas. Receba o seu iPhone.</p>
           <p class="hero__mini-text">Sem banco, sem juros, sem surpresas.</p>
-          <a href="#reservar" class="btn btn--primary btn--lg">Quero minha posição</a>
+          <a href="funil-vendas.html" class="btn btn--primary btn--lg">Quero minha posição</a>
         </div>
         <div class="hero__visual">
           <img src="images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
@@ -190,7 +190,7 @@
           </div>
         </div>
 
-        <a href="https://wa.me/34671941267" class="btn btn--primary btn--lg mb-24">
+        <a href="funil-vendas.html" class="btn btn--primary btn--lg mb-24">
           Reservar Minha Posição <i data-lucide="arrow-right" class="ml-8"></i>
         </a>
         
@@ -225,7 +225,7 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="https://wa.me/34671941267" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="funil-vendas.html" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
           <!-- Opção 02 -->
@@ -252,7 +252,7 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="https://wa.me/34671941267" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="funil-vendas.html" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
         </div>
@@ -494,19 +494,7 @@
         <p class="section-desc mb-48 mx-auto">O grupo abre com os primeiros 12 participantes qualificados.</p>
 
         <div class="form-card-premium">
-          <form class="lead-form">
-            <div class="form-grid">
-              <input type="text" placeholder="Nome Completo" required class="form-input">
-              <input type="text" placeholder="WhatsApp (+ Código País)" required class="form-input">
-              <select class="form-input" required>
-                <option value="" disabled selected>País de Residência</option>
-                <option value="Portugal">Portugal</option>
-                <option value="Espanha">Espanha</option>
-                <option value="Outro">Outro</option>
-              </select>
-            </div>
-            <button type="submit" class="btn btn--primary btn--full btn--lg mt-24">RESERVAR MINHA POSIÇÃO</button>
-          </form>
+          <a href="funil-vendas.html" class="btn btn--primary btn--full btn--lg mt-24">RESERVAR MINHA POSIÇÃO</a>
           <div class="counter-discreet">6 de 12 vagas confirmadas</div>
         </div>
       </div>
@@ -526,7 +514,7 @@
         <h4 class="footer__title">Links</h4>
         <ul class="footer__links">
           <li><a href="#como-funciona">Como funciona</a></li>
-          <li><a href="#reservar">Lista prioritária</a></li>
+          <li><a href="funil-vendas.html">Lista prioritária</a></li>
           <li><a href="mailto:sales@wekota.eu">Contato</a></li>
         </ul>
       </div>
