--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -891,7 +891,7 @@
       <span>Os seus dados estão protegidos pelo RGPD. Nunca partilhamos informação com terceiros para marketing.</span>
     </div>
 
-    <button class="btn-primary" onclick="goTo('step2')">Continuar</button>
+    <button class="btn-primary" id="btn-step1">Continuar</button>
     <button class="btn-secondary" onclick="goTo('split')">← Voltar</button>
   </div>
 
@@ -946,7 +946,7 @@
       </div>
     </div>
 
-    <button class="btn-primary" onclick="goTo('step3')">Continuar</button>
+    <button class="btn-primary" id="btn-step2">Continuar</button>
     <button class="btn-secondary" onclick="goTo('step1')">← Voltar</button>
   </div>
 
@@ -1134,6 +1134,93 @@
   </div>
 
 </div>
+
+<script type="module">
+  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
+  // Initialize Supabase
+  // Note: Env vars might not work directly in HTML without a build step like Vite. 
+  // Assuming this is running in a Vite env based on previous context.
+  // If not, we'd need hardcoded keys or a config file. 
+  // Given the previous turns used import.meta.env, I'll stick to that.
+  const supabaseUrl = import.meta.env.VITE_SUPABASE_URL
+  const supabaseAnonKey = import.meta.env.VITE_SUPABASE_ANON_KEY
+  const supabase = createClient(supabaseUrl, supabaseAnonKey)
+
+  let currentLeadId = null
+
+  // UI Logic needs to be exposed or re-implemented here if we want to mix.
+  // Simplest way: Expose save functions to window so onclicks work, OR add event listeners.
+  // I replaced onclicks with IDs for the buttons above.
+
+  document.getElementById('btn-step1').addEventListener('click', async () => {
+    const name = document.querySelector('#screen-step1 input[type="text"]').value
+    const email = document.querySelector('#screen-step1 input[type="email"]').value
+    const phone = document.querySelector('#screen-step1 input[type="tel"]').value
+    const country = document.querySelector('#screen-step1 select').value
+
+    if (!name || !email || !phone || !country) {
+      alert('Por favor, preencha todos os campos.')
+      return
+    }
+
+    // Show loading state?
+    const btn = document.getElementById('btn-step1')
+    const originalText = btn.textContent
+    btn.textContent = 'A guardar...'
+    btn.disabled = true
+
+    try {
+      const { data, error } = await supabase
+        .from('leads')
+        .insert([{ name, email, whatsapp: phone, country, status: 'started' }])
+        .select()
+
+      if (error) throw error
+
+      currentLeadId = data[0].id
+      window.goTo('step2')
+    } catch (error) {
+      console.error('Error:', error)
+      alert('Erro ao guardar. Tente novamente.')
+    } finally {
+      btn.textContent = originalText
+      btn.disabled = false
+    }
+  })
+
+  document.getElementById('btn-step2').addEventListener('click', async () => {
+    const product = document.querySelector('.product-card.selected h4').textContent.trim()
+    const duration = document.querySelector('.dur-card.selected .dur-months').textContent.trim() + ' meses'
+    const plan = `${product} - ${duration}`
+
+    const btn = document.getElementById('btn-step2')
+    const originalText = btn.textContent
+    btn.textContent = 'A guardar...'
+    btn.disabled = true
+
+    try {
+      if (currentLeadId) {
+        const { error } = await supabase
+          .from('leads')
+          .update({ plan, status: 'selected_plan' })
+          .eq('id', currentLeadId)
+        
+        if (error) throw error
+      }
+      window.goTo('step3')
+    } catch (error) {
+      console.error('Error:', error)
+      // Proceed anyway or alert? Proceeding for UX flow, maybe lead didn't save in step 1.
+      window.goTo('step3')
+    } finally {
+      btn.textContent = originalText
+      btn.disabled = false
+    }
+  })
+
+  // We can add more steps here (KYC upload logic would go to storage, etc.)
+</script>
 
 <script>
   const stepLabels = {
