[dyad] Removi a menção a "Protótipo Interativo" do banner superior no funil de conversão.

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -736,7 +736,7 @@
 </head>
 <body>
 
-<div class="proto-banner">⚡ Protótipo Interativo — Fluxo de Conversão WEKOTA</div>
+<div class="proto-banner">⚡ Fluxo de Conversão WEKOTA</div>
 
 <!-- WhatsApp Float -->
 <a class="wa-float" href="#" onclick="return false;">
