[dyad] Removi a palavra "(demo)" do botão final de sucesso no funil de conversão.

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1110,7 +1110,7 @@
       <span>Enviámos o contrato assinado e o resumo da adesão para o seu email. Guarde-o para referência.</span>
     </div>
 
-    <button class="btn-primary" onclick="goTo('split')">← Voltar ao início (demo)</button>
+    <button class="btn-primary" onclick="goTo('split')">← Voltar ao início</button>
 
     <div class="trust-bar">
       <div class="trust-item"><span class="trust-icon">📱</span> Acompanhe pelo WhatsApp</div>
